[package]
name = "jjj-core"
version = "0.1.0"
edition = "2024"

#核心
[lib]
name="jjj_core"
path="src/lib.rs"


[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.5",default-features = false, features = ["blocking", "gzip", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"